Test module changes

--- a/app/code/Shesh/Test/view/frontend/templates/test.phtml
+++ b/app/code/Shesh/Test/view/frontend/templates/test.phtml
@@ -11,7 +11,7 @@
 <p><?php //echo $block->getTest(); ?></p>
 <p><?php //echo __('This is a text.') ?></p>
 
-<table class="table">
+<table class="table table-bordered">
     <thead>
       <tr>
         <th>S.No.</th>
