--- a/app/code/Shesh/Test/view/frontend/layout/test_index_index.xml
+++ b/app/code/Shesh/Test/view/frontend/layout/test_index_index.xml
@@ -8,9 +8,9 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
         <title></title>
-        <!-- Add external resources 
+        <!-- Add external resources--> 
 	    <link rel="stylesheet" type="text/css" src="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" src_type="url" />
-        <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js" src_type="url" />-->
+        
     </head>
     <body>
         <referenceContainer name="content">
